--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 :root {
+  margin: 0 !important;
+  padding: 0 !important;
+  box-sizing: border-box !important;
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -15,13 +18,9 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+.smooth-transition {
+  @apply transition-transform duration-300 ease-in-out;
+}
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
